# ml_quant_v2

./: .env.example  .gitignore  CONTEXT_HANDOFF_V2.md  README.md  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/.streamlit/: config.toml
app/pages/: 1_🎛️ Dashboard.py  2_▶️ Run_Center.py  3_💾 Data_Center.py  4_🧪 Feature_Lab.py  5_🌎 Strategy_Lab.py  6_📈 Backtest_Lab.py  7_🎯 Targets_Analyzer.py
app/ui/: charts.py  data_access.py  execution.py  kpi.py  navigation.py  progress_events.py  run_artifacts.py  subprocess_runner.py
artifacts/index/runs/: demo_ml_gbdt_v1__2024-01-01_2025-12-31__ingest-feat-lbl-rec-bt__ionq.json  demo_ml_gbdt_v1__2025-12-17_2026-01-16__feat-lbl-rec-bt__pltr.json  demo_ml_gbdt_v1__2025-12-17_2026-01-16__ingest-lbl-rec-feat-bt__ionq.json  demo_ml_gbdt_v1__2025-12-18_2026-01-17__ingest-feat-lbl-rec-bt__ionq.json  demo_ml_gbdt_v1__2025-12-18_2026-01-17__ingest-feat-lbl-rec__ionq.json  demo_momentum_v1__2025-12-17_2026-01-16__ingest-feat-lbl-rec-bt__aapl-msft.json  demo_momentum_v1__2025-12-17_2026-01-16__ingest__aapl-ionq-qqqm.json  demo_momentum_v1__2025-12-18_2026-01-17__feat-lbl-rec-bt__nvda-spy.json  demo_momentum_v1__2025-12-18_2026-01-17__ingest-feat-lbl-rec-bt__nvda.json  demo_momentum_v1__2025-12-18_2026-01-17__ingest-feat-lbl-rec-bt__nvda__2faba809.json  demo_momentum_v1__2025-12-18_2026-01-17__ingest__nvda.json  demo_momentum_v1__2025-12-18_2026-01-17__ingest__nvda__396b856a.json  plan_20260116_093255_ui_47f8c3.json
artifacts/runs/21c05567-3d0f-4e3e-9386-133cac06e8bb/: run.json
artifacts/runs/2949fd26-9965-4cb8-b12a-8c69ec30d535/: run.json
artifacts/runs/2faba809-a977-4ab3-8ae3-097a1a117528/: config.json  run.json
artifacts/runs/396b856a-392e-455d-a77c-d82bedf916b8/: config.json  run.json
artifacts/runs/41194f04-e60c-45fb-9562-749344f292a3/: config.json  run.json
artifacts/runs/41194f04-e60c-45fb-9562-749344f292a3/reports/: ml_metrics.json  ml_summary.md
artifacts/runs/60f7b4e0-6bad-4528-8abc-b3db148b4e06/: config.json  run.json
artifacts/runs/60f7b4e0-6bad-4528-8abc-b3db148b4e06/models/: model.lightgbm.joblib
artifacts/runs/60f7b4e0-6bad-4528-8abc-b3db148b4e06/outputs/: predictions.csv
artifacts/runs/60f7b4e0-6bad-4528-8abc-b3db148b4e06/reports/: ml_metrics.json
artifacts/runs/64e72473-828b-4f42-826f-1489bfc4ca80/: config.json  run.json
artifacts/runs/7aff8f80-26b9-4ca0-977d-c7c0aa3544e8/: run.json
artifacts/runs/8afe2409-d52e-40ec-89bc-76523a288b65/: config.json  run.json
artifacts/runs/8afe2409-d52e-40ec-89bc-76523a288b65/models/: model.lightgbm.joblib
artifacts/runs/8afe2409-d52e-40ec-89bc-76523a288b65/outputs/: predictions.csv
artifacts/runs/8b539e7d-7f91-41e1-bf64-faec8e922857/: config.json  run.json
artifacts/runs/badeaa27-ebce-45d0-b083-5e4c3539823f/: config.json  run.json
artifacts/runs/ca7f5104-0151-4c6d-bdd6-8cb37770ad7c/: config.json  run.json
artifacts/runs/ce416fc6-27df-4b1d-8ebd-9a99b55a755e/: run.json
artifacts/runs/d3488335-f735-4c59-ae77-a5dad3164cc9/: config.json  run.json
artifacts/runs/d6229f7a-6878-4db6-b458-18b2e21911de/: config.json  run.json
artifacts/runs/e5565106-f0e3-4768-a26b-f9b4bfae62f6/: config.json  run.json
artifacts/runs/eb04ab56-0128-4c8d-9632-c30757a690b8/: config.json  run.json
artifacts/runs/plan_20260116_093255_ui_47f8c3/: plan.json
artifacts/runs/plan_20260116_104923_ui_5a0d85/: plan.json
artifacts/runs/plan_20260116_105143_ui_25be18/: plan.json
artifacts/runs/plan_20260116_105904_ui_024bfa/: plan.json
artifacts/runs/plan_20260116_110514_ui_176653/: plan.json
artifacts/runs/plan_20260116_134058_ui_74de80/: plan.json
artifacts/runs/plan_20260116_150825_ui_4215bc/: plan.json
artifacts/runs/plan_20260117_031753_ui_bc3855/: plan.json
artifacts/runs/plan_20260117_060539_ui_3cc566/: plan.json
artifacts/runs/plan_20260117_063858_be31afbf/: plan.json
artifacts/runs/plan_20260117_114815_ui_5a77d5/: plan.json
data/: meta.db  quant.duckdb
docs/: V2_PRODUCTION_CHAIN_ROLES.md  run_contract.md  ui_philosophy.md
docs/artifacts/: README.md
docs/artifacts/runs/2026-01-15_P2_data_curator/: SUMMARY.md
docs/implementation/v2/: DB_SCHEMA.md  IMPLEMENTATION_PLAN.md  RUNBOOK.md  UI_WIREFRAME.md  V2_SYSTEM_SPEC.md  V2_UI_SYSTEM_SPEC.md  YAML_SCHEMA.md
market_data/: __init__.py  client.py
market_data/providers/: __init__.py  alpha_vantage.py
scripts/: verify_p5.py
src/quant/: cli.py  config.py  interactive.py  logging.py
src/quant/backtest_engine/: engine.py
src/quant/batch_orchestrator/: pipeline.py
src/quant/data_curator/: ingest.py  provider.py  quality_gate.py
src/quant/db/: duck.py  engine.py  metastore.py  schema_duck.sql  sqlite.py  timeseries.py
src/quant/feature_store/: features.py  labels.py
src/quant/features/: definitions.py
src/quant/labels/: make_labels.py
src/quant/ml/: experts.py  scorer.py  splits.py  trainer.py
src/quant/models/: __init__.py  market.py  meta.py
src/quant/portfolio_supervisor/: engine.py
src/quant/repos/: run_registry.py  symbol.py  targets.py
src/quant/services/: backtest.py  feature.py  label.py  market_data.py  ml.py  portfolio.py
src/quant/strategy_lab/: loader.py  recommender.py
strategies/: ai_sector_top_nvda_pltr_amd.yml.yaml  example.yaml  ml_gbdt_example.yaml
tests/: test_e2e_ingest.py  test_recommender_plugins.py  test_run_contract_v1.py  test_ui_contracts.py
(+102 files in other folders)
