[project]
name = "quant-lab_v2"
version = "0.1.0"
description = "Personal ML-Quant Lab V2 for Quantitative Finance and Algorithmic Trading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "requests>=2.32.0",
  "tenacity>=8.2.3",
  "streamlit>=1.36.0",
  "watchdog>=6.0.0",
  "sqlmodel>=0.0.31",
  "lightgbm>=4.6.0",
  "scikit-learn>=1.8.0",
  "joblib>=1.5.3",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "inquirerpy>=0.3.4",
  "plotly>=6.5.2",
  "pyyaml>=6.0.3",
  "streamlit-monaco>=0.1.0",
  "pytest>=8.0",
  "xgboost>=3.1.3",
  "catboost>=1.2.8",
]

[project.scripts]
quant = "quant.cli:app"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant", "market_data"]
